
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(LtServ)


SET(CMAKE_INSTALL_PREFIX ./bin)
#ADD_DEFINITIONS(-g -Wall -Werror)
ADD_DEFINITIONS(-g -Wall)

INCLUDE_DIRECTORIES(/home/work/boost_1_54_0)
LINK_DIRECTORIES(/home/work/boost_1_54_0/stage/lib)

AUX_SOURCE_DIRECTORY(. SRC_LIST)

#for SO
#ADD_LIBRARY(xxx SHARED ${SRC_LIST})
#TARGET_LINK_LIBRARIES(xxx ...)
#SET_TARGET_PROPERTIES(xxx PROPERTIES VERSION 1.0.0 SOVERSION 1)


#for APP
ADD_EXECUTABLE(ltServ ${SRC_LIST})
TARGET_LINK_LIBRARIES(ltServ pthread boost_filesystem boost_system)
INSTALL(TARGETS ltServ RUNTIME DESTINATION ./bin)
